@@ -97,4 +97,19 @@
 
      The template context for Pylons-style applications.
 
+   .. attribute:: matchdict
+
+      If a :term:`route` has matched during this request, this attribute will
+      be a dictionary containing the values matched by the URL pattern
+      associated with the route.  If a route has not matched during this
+      request, the value of this attribute will be ``None``. See
+      :ref:`matchdict`.
+
+   .. attribute:: matched_route
+
+      If a :term:`route` has matched during this request, this attribute will
+      be an obect representing the route matched by the URL pattern
+      associated with the route.  If a route has not matched during this
+      request, the value of this attribute will be ``None``. See
+      :ref:`matched_route`.
 
