@@ -13,6 +13,10 @@ Features
 
 - New API method: ``pyramid.settings.asbool``.
 
+- New API methods for ``pyramid.request.Request``: ``model_url`` and
+  ``route_url``.  These are simple passthroughs for their respective
+  functions in ``pyramid.url``.
+
 Bug Fixes
 ---------
 
@@ -31,6 +35,9 @@ Documentation
 
 - ZODB+traversal wiki (``wiki``) tutorial updated due to changes to
   ``pyramid_zodb`` paster template.
+
+- Documented the ``matchdict`` and ``matched_route`` attributes of the
+  request object in the Request API documentation.
 
 1.0a2 (2010-11-09)
 ==================
